<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="activity"
            type="com.example.payfromhome.view.RegisterActivity" />

        <variable
            name="user"
            type="com.example.payfromhome.model.User" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context=".view.RegisterActivity">

        <com.google.android.material.textview.MaterialTextView
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/register"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_logo" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/name"
            android:textAllCaps="true"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_logo" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/white"
            android:paddingStart="8dp"
            android:paddingTop="12dp"
            android:paddingEnd="8dp"
            android:paddingBottom="12dp"
            android:text="@={user.name}" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="EMAIL"
            android:textAllCaps="true"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_logo" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/white"
            android:paddingStart="8dp"
            android:paddingTop="12dp"
            android:paddingEnd="8dp"
            android:paddingBottom="12dp"
            android:text="@={user.username}" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/password"
            android:textAllCaps="true"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_logo" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/white"
            android:inputType="textPassword"
            android:paddingStart="8dp"
            android:paddingTop="12dp"
            android:paddingEnd="8dp"
            android:paddingBottom="12dp"
            android:text="@={user.password}" />

        <Button
            android:id="@+id/button_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/button_primary"
            android:onClick="@{activity.onRegisterButtonClicked}"
            android:padding="12dp"
            android:text="@string/register" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="@{activity.onLoginButtonClicked}"
            android:text="@string/login" />

    </LinearLayout>
</layout>